@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(automake.in)
 
-AM_INIT_AUTOMAKE(automake, 1.1k)
+AM_INIT_AUTOMAKE(automake, 1.1l)
 
 AC_PATH_PROG(PERL, perl)
 if test -z "$PERL"; then
