@@ -17,4 +17,4 @@ mkdir sub
 
 $AUTOMAKE || exit 1
 
-grep 'automake.*sub/Makefile' Makefile.in
+grep 'automake.*sub/Makefile' sub/Makefile.in
