@@ -1,3 +1,3 @@
 @set UPDATED 5 December 1996
-@set EDITION 1.1k
-@set VERSION 1.1k
+@set EDITION 1.1l
+@set VERSION 1.1l
